package com.example.shutda.view.data;

public class DummyCards {

    public final static int TheNumberofCard = 20;
    public final static int January1 = 0;
    public final static int January2 = 1;
    public final static int February1 = 10;
    public final static int February2 = 11;
    public final static int March1 = 100;
    public final static int March2 = 101;
    public final static int April1 = 1000;
    public final static int April2 = 1001;
    public final static int May1 = 10000;
    public final static int May2 = 10001;
    public final static int June1 = 100000;
    public final static int June2 = 100001;
    public final static int July1 = 1000000;
    public final static int July2 = 1000001;
    public final static int August1 = 10000000;
    public final static int August2 = 10000001;
    public final static int September1 = 100000000;
    public final static int September2 = 100000001;
    public final static int October1 = 1000000000;
    public final static int October2 = 1000000001;

    public final static int Cards[] = { January1, January2,
            February1, February2,
            March1, March2,
            April1, April2,
            May1, May2,
            June1, June2,
            July1, July2,
            August1,August2,
            September1, September2,
            October1, October2 };

    public final static int mangtong = 0;
    public final static int onegguk = 1;
    public final static int twogguk = 2;
    public final static int threegguk = 3;
    public final static int fourgguk = 4;
    public final static int fivegguk = 5;
    public final static int sixgguk = 6;
    public final static int sevengguk = 7;
    public final static int eightgguk = 8;
    public final static int gapou = 9;

    public final static int seryuk = 10;
    public final static int jangsa = 11;
    public final static int jangping = 12;
    public final static int guping = 13;
    public final static int doksa = 14;
    public final static int alli = 15;

    public final static int oneDDang = 20;
    public final static int twoDDang = 30;
    public final static int threeDDang = 40;
    public final static int fourDDang = 50;
    public final static int fiveDDang = 60;
    public final static int sixDDang = 70;
    public final static int sevenDDang = 80;
    public final static int eightDDang = 90;
    public final static int nineDDang = 100;
    public final static int jangDDang = 110;

    public final static int gwangDDang13 = 130;
    public final static int gwangDDAng18 = 140;
    public final static int gwangDDAng38 = 200;

    public final static int GwangCatcher = 16;
    public final static int DDangCatcher = 17;
    public final static int rematch = 18;
    public final static int rematchDumbful = 19;


}
