package com.example.shutda.view.data;

public class JogboData {

    public String text;
    public int img;
    public JogboData(String text, int img){
        this.text = text;
        this.img = img;
    }

}
