package com.example.shutda.view.data;

public class constantsField {

    public static final int basedBettingMoney = 5000;
    public static final Boolean onlyLeaveEnable[]= {false, false, false, true};
    public static final Boolean [] AllbuttonOFF = {false, false, false, false};
    public static final int AITurnPeriod = 3000;
    public static final int ReactionSpeed = 500;

}
