@startuml

title __APP's Class Diagram__\n

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class BackPressCloseHandler {
        }
      }
    }
  }
  

  package com.example.shutda {
    class BuildConfig {
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.data {
        class DummyCards {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.Ingame {
        class EventHandler {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.Ingame {
        class GameThread {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      class JogboActivity {
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class JogboAdapter {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.data {
        class JogboData {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      class LoginActivity {
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      class MainActivity {
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      class MenuActivity {
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class MusicPlayer {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      class RankActivity {
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class RankAdapter {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      class RuleActivity {
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      class SignUpActivity {
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.Ingame {
        abstract class TaskQueue {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.data {
        class User {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.data {
        class UserForRank {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.Ingame {
        class WinnerChecker {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.data {
        class constantsField {
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.Ingame {
        class gameViewModel {
        }
      }
    }
  }
  

  EventHandler -up-|> TaskQueue
  GameThread o-- gameViewModel : inGame
  GameThread o-- MainActivity : mainActivity
  JogboActivity -up-|> AppCompatActivity
  JogboAdapter -up-|> Adapter
  LoginActivity -up-|> AppCompatActivity
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- BackPressCloseHandler : backPressCloseHandler
  MainActivity o-- User : Me
  MainActivity o-- User : Ai
  MainActivity o-- User : Ai2
  MainActivity o-- gameViewModel : inGame
  MainActivity o-- GameThread : gameThread
  MenuActivity -up-|> AppCompatActivity
  RankActivity -up-|> AppCompatActivity
  RankActivity o-- RankAdapter : rankAdapter
  RankAdapter -up-|> BaseAdapter
  RuleActivity -up-|> AppCompatActivity
  SignUpActivity -up-|> AppCompatActivity
  gameViewModel -up-|> ViewModel
  gameViewModel o-- WinnerChecker : winnerChecker


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
